solve mini editor overflow issues

--- a/styles/editor-mini.less
+++ b/styles/editor-mini.less
@@ -3,10 +3,6 @@ atom-text-editor.mini {
   border: 1px solid @input-border-color;
   font-family: @font-family;
   font-size: @modular-scale-m * 1rem;
-  padding: @modular-scale-xxs * 1rem;
-  padding-right: 0;
-  line-height: @component-line-height - @modular-scale-xxs * 2rem;
-
   background: @input-background-color;
   color: @base-fg;
 
